renamed to add LLM prefix infront of LLM related scripts and added test notebook

--- a/notebooks/gemini_llm_feature_test.ipynb
+++ b/notebooks/gemini_llm_feature_test.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "id": "b1716847",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
     "\n",
     "sys.path.append(r\"c:\\\\Users\\\\user\\\\Desktop\\\\kz code\\\\fx-ml-pipeline\")\n",
     "\n",
-    "from src_clean.data_pipelines.silver.news_feature_pipelines import (\n",
+    "from src_clean.data_pipelines.silver.LLM_news_feature_pipelines import (\n",
     "    NewsLLMFeaturePipeline,\n",
     "    combine_article_text,\n",
     ")"
@@ -146,14 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "8cf54d2d",
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import List, Dict, Any\n",
     "from datetime import datetime\n",
-    "from src_clean.data_pipelines.silver.news_manifest import filter_manifest\n",
+    "from src_clean.data_pipelines.silver.LLM_news_manifest import filter_manifest\n",
     "\n",
     "def load_articles_between(input_dir: Path, start: date, end: date, limit: int) -> List[Dict[str, Any]]:\n",
     "    # Load and filter articles by published_at timestamp.\n",
@@ -1435,13 +1435,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "636e1ded",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sequentially call Gemini with rolling context\n",
-    "from src_clean.data_pipelines.silver.news_manifest import filter_manifest\n",
+    "from src_clean.data_pipelines.silver.LLM_news_manifest import filter_manifest\n",
     "from src_clean.data_pipelines.silver.clean_manifest import clean_manifest_df\n",
     "\n",
     "MANIFEST_PATH = PROJECT_ROOT / 'data_clean/silver/news/news_manifest_cleaned_20251022_122221.parquet'\n",
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "63f7ff62",
    "metadata": {},
    "outputs": [
@@ -1860,8 +1860,8 @@
    ],
    "source": [
     "import json\n",
-    "from src_clean.data_pipelines.silver.news_feature_pipelines import NewsFeatureSchema\n",
-    "from src_clean.data_pipelines.silver import news_feature_pipelines as nf\n",
+    "from src_clean.data_pipelines.silver.LLM_news_feature_pipelines import NewsFeatureSchema\n",
+    "from src_clean.data_pipelines.silver import LLM_news_feature_pipelines as nf\n",
     "import importlib\n",
     "\n",
     "# Reload if you've just edited the module\n",
@@ -1906,7 +1906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": null,
    "id": "710b6bb0",
    "metadata": {},
    "outputs": [
@@ -1924,7 +1924,7 @@
    "source": [
     "import importlib\n",
     "import pandas as pd\n",
-    "import src_clean.data_pipelines.silver.news_feature_pipelines as nf\n",
+    "import src_clean.data_pipelines.silver.LLM_news_feature_pipelines as nf\n",
     "\n",
     "# Reload module to pick up recent edits\n",
     "importlib.reload(nf)\n",
