modified silver table, load_candles, to reindex on 1minute interval and backfill previous values forward

--- a/notebooks/N02_kz_ARIMA.ipynb
+++ b/notebooks/N02_kz_ARIMA.ipynb
@@ -2,26 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 151,
    "id": "3a37736c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from datetime import datetime, timedelta"
+    "from datetime import datetime, timedelta\n",
+    "import logging\n",
+    "from logging import Logger\n",
+    "from typing import Optional"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 150,
    "id": "b7b031c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "train_csv = '../data_clean/gold/market/features/spx500_features.csv'\n",
+    "train_news = '../data_clean/Latest Gold/news/signals/spx500_news_signals.csv'\n",
     "\n",
-    "Xraw = pd.read_csv(train_csv)"
+    "Xraw = pd.read_csv(train_csv)\n",
+    "Xnews = pd.read_csv(train_news)"
    ]
   },
   {
@@ -422,27 +427,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "caa52202",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Timestamp('2023-10-12 00:00:00')"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "endog_val.index[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 146,
    "id": "ed603d22",
    "metadata": {},
@@ -483,104 +467,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
-   "id": "9582dd5a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.000191</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.000162</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.000079</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.000098</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.000132</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0.000094</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0.000220</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0.000284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>0.000304</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>0.000297</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          0\n",
-       "0  0.000191\n",
-       "1  0.000162\n",
-       "2  0.000079\n",
-       "3  0.000098\n",
-       "4  0.000132\n",
-       "5  0.000094\n",
-       "6  0.000220\n",
-       "7  0.000284\n",
-       "8  0.000304\n",
-       "9  0.000297"
-      ]
-     },
-     "execution_count": 144,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results_val"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "55e26637",
    "metadata": {},
@@ -616,12 +502,398 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14c2a25e",
+   "metadata": {},
+   "source": [
+    "# Merging market and news"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
+   "id": "72d5f45b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup logging\n",
+    "logging.basicConfig(\n",
+    "    level=logging.INFO,\n",
+    "    format='%(asctime)s - %(levelname)s - %(message)s'\n",
+    ")\n",
+    "logger = logging.getLogger(__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
    "id": "fdc857d4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def merge_market_news(\n",
+    "    market_df: pd.DataFrame,\n",
+    "    news_df: Optional[pd.DataFrame],\n",
+    "    tolerance_hours: int = 6\n",
+    ") -> pd.DataFrame:\n",
+    "    \"\"\"Left-join market data with news signals, forward-filling missing news values.\"\"\"\n",
+    "    market_sorted = market_df.sort_values('time').reset_index(drop=True).copy()\n",
+    "    market_sorted['time'] = pd.to_datetime(market_sorted['time'])\n",
+    "\n",
+    "    if news_df is None or news_df.empty:\n",
+    "        logger.info(\"No news data - using market features only\")\n",
+    "        market_sorted['news_rows_since_update'] = pd.NA\n",
+    "        market_sorted['news_available'] = 0\n",
+    "        market_sorted['news_age_minutes'] = np.nan\n",
+    "        return market_sorted\n",
+    "\n",
+    "    logger.info(f\"Merging market features with news signals. Market Feature Initial Shape: {market_sorted.shape}\")\n",
+    "\n",
+    "    news_sorted = news_df.sort_values('signal_time').reset_index(drop=True).copy()\n",
+    "    news_sorted['signal_time'] = pd.to_datetime(news_sorted['signal_time'])\n",
+    "\n",
+    "    news_value_cols = [col for col in news_sorted.columns if col != 'signal_time']\n",
+    "    rename_map = {'signal_time': 'news_signal_time', **{col: f'news_{col}' for col in news_value_cols}}\n",
+    "    news_prefixed = news_sorted.rename(columns=rename_map)\n",
+    "\n",
+    "    merge_kwargs = {\n",
+    "        \"left_on\": \"time\",\n",
+    "        \"right_on\": \"news_signal_time\",\n",
+    "        \"direction\": \"backward\",\n",
+    "    }\n",
+    "    if tolerance_hours is not None:\n",
+    "        merge_kwargs[\"tolerance\"] = pd.Timedelta(hours=tolerance_hours)\n",
+    "\n",
+    "    combined_df = pd.merge_asof(market_sorted, news_prefixed, **merge_kwargs)\n",
+    "\n",
+    "    news_time = combined_df['news_signal_time']\n",
+    "    is_new_news = news_time.notna() & news_time.ne(news_time.shift())\n",
+    "    event_id = is_new_news.cumsum()\n",
+    "    rows_since = combined_df.groupby(event_id).cumcount().astype('Int64')\n",
+    "    rows_since = rows_since.where(event_id > 0, pd.NA)\n",
+    "\n",
+    "    news_cols_to_ffill = [col for col in combined_df.columns if col.startswith('news_')]\n",
+    "    if news_cols_to_ffill:\n",
+    "        combined_df[news_cols_to_ffill] = combined_df[news_cols_to_ffill].ffill()\n",
+    "\n",
+    "    combined_df['news_rows_since_update'] = rows_since\n",
+    "    combined_df['news_available'] = combined_df['news_signal_time'].notna().astype(int)\n",
+    "\n",
+    "    if 'news_signal_time' in combined_df.columns:\n",
+    "        combined_df['news_signal_time'] = pd.to_datetime(combined_df['news_signal_time'])\n",
+    "        combined_df['news_age_minutes'] = (\n",
+    "            combined_df['time'] - combined_df['news_signal_time']\n",
+    "        ).dt.total_seconds() / 60\n",
+    "\n",
+    "    logger.info(f\"Merged dataset shape: {combined_df.shape}\")\n",
+    "    news_coverage = combined_df['news_available'].mean()\n",
+    "    fresh_news = (combined_df['news_rows_since_update']==0).mean()\n",
+    "    logger.info(f\"News coverage: {news_coverage:.1%}. Fresh news fraction: {fresh_news:.1%}\")\n",
+    "    labels = combined_df[['time', 'instrument' ,'return_30']].copy()\n",
+    "    labels['return_30'] = labels['return_30'].shift(30)\n",
+    "\n",
+    "\n",
+    "    return combined_df, labels\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "d930ea29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-01 12:40:18,580 - INFO - Merging market features with news signals. Market Feature Initial Shape: (1705216, 68)\n",
+      "2025-11-01 12:40:19,866 - INFO - Merged dataset shape: (1705216, 82)\n",
+      "2025-11-01 12:40:19,924 - INFO - News coverage: 99.7%. Fresh news fraction: 0.7%\n"
+     ]
+    }
+   ],
+   "source": [
+    "combined_df, labels = merge_market_news(Xraw, Xnews)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "c3303979",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_df.to_csv('./combined_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "e5da4ed0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_29284\\522246502.py:1: FutureWarning: 'T' is deprecated and will be removed in a future version, please use 'min' instead.\n",
+      "  pd.date_range(start='1/1/2021', end='3/31/2021', freq='1T')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2021-01-01 00:00:00', '2021-01-01 00:01:00',\n",
+       "               '2021-01-01 00:02:00', '2021-01-01 00:03:00',\n",
+       "               '2021-01-01 00:04:00', '2021-01-01 00:05:00',\n",
+       "               '2021-01-01 00:06:00', '2021-01-01 00:07:00',\n",
+       "               '2021-01-01 00:08:00', '2021-01-01 00:09:00',\n",
+       "               ...\n",
+       "               '2021-03-30 23:51:00', '2021-03-30 23:52:00',\n",
+       "               '2021-03-30 23:53:00', '2021-03-30 23:54:00',\n",
+       "               '2021-03-30 23:55:00', '2021-03-30 23:56:00',\n",
+       "               '2021-03-30 23:57:00', '2021-03-30 23:58:00',\n",
+       "               '2021-03-30 23:59:00', '2021-03-31 00:00:00'],\n",
+       "              dtype='datetime64[ns]', length=128161, freq='min')"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.date_range(start='1/1/2021', end='3/31/2021', freq='1T')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e11080b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "project_root = Path.cwd().resolve()\n",
+    "if project_root.name == \"notebooks\":          # notebook opened from ./notebooks\n",
+    "    project_root = project_root.parent\n",
+    "\n",
+    "if str(project_root) not in sys.path:\n",
+    "    sys.path.insert(0, str(project_root))\n",
+    "\n",
+    "from src_clean.data_pipelines.silver.market_volatility_processor import VolatilityProcessor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9edb1b93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vp = VolatilityProcessor(input_path='../data_clean/bronze/market/spx500_usd_m1_5years.ndjson', output_path='./test', window=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c38dc107",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-01 13:37:51,622 - INFO - Loading candles from ../data_clean/bronze/market/spx500_usd_m1_5years.ndjson\n",
+      "C:\\Users\\user\\Desktop\\kz code\\fx-ml-pipeline\\src_clean\\data_pipelines\\silver\\market_volatility_processor.py:68: FutureWarning: 'T' is deprecated and will be removed in a future version, please use 'min' instead.\n",
+      "  full_index = pd.date_range(\n",
+      "2025-11-01 13:38:01,595 - INFO - Reindex completed. Adding gap metadata.\n",
+      "2025-11-01 13:38:03,155 - INFO - Loaded 2625455 candles after filling gaps (original: 1705276). Percentage of backfill: 35.0%. Percentage of orig 30-60min: 68.8%. Percentage of 30-360min: 73.4%\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = vp.load_candles()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5e39d2c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.iloc[:200000,:].to_csv('./test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "55220236",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>instrument</th>\n",
+       "      <th>granularity</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>collected_at</th>\n",
+       "      <th>minutes_since_last_data</th>\n",
+       "      <th>is_backfilled</th>\n",
+       "      <th>has_original_prev_30_to_60min</th>\n",
+       "      <th>has_original_prev_30_to_360min</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2625450</th>\n",
+       "      <td>2025-10-10 20:55:00+00:00</td>\n",
+       "      <td>SPX500_USD</td>\n",
+       "      <td>M1</td>\n",
+       "      <td>6515.0</td>\n",
+       "      <td>6517.0</td>\n",
+       "      <td>6503.6</td>\n",
+       "      <td>6513.6</td>\n",
+       "      <td>555.0</td>\n",
+       "      <td>2025-10-12T15:30:07.014647Z</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2625451</th>\n",
+       "      <td>2025-10-10 20:56:00+00:00</td>\n",
+       "      <td>SPX500_USD</td>\n",
+       "      <td>M1</td>\n",
+       "      <td>6513.6</td>\n",
+       "      <td>6518.6</td>\n",
+       "      <td>6512.2</td>\n",
+       "      <td>6516.0</td>\n",
+       "      <td>416.0</td>\n",
+       "      <td>2025-10-12T15:30:07.014653Z</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2625452</th>\n",
+       "      <td>2025-10-10 20:57:00+00:00</td>\n",
+       "      <td>SPX500_USD</td>\n",
+       "      <td>M1</td>\n",
+       "      <td>6516.0</td>\n",
+       "      <td>6525.2</td>\n",
+       "      <td>6511.6</td>\n",
+       "      <td>6514.4</td>\n",
+       "      <td>501.0</td>\n",
+       "      <td>2025-10-12T15:30:07.014659Z</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2625453</th>\n",
+       "      <td>2025-10-10 20:58:00+00:00</td>\n",
+       "      <td>SPX500_USD</td>\n",
+       "      <td>M1</td>\n",
+       "      <td>6513.8</td>\n",
+       "      <td>6515.6</td>\n",
+       "      <td>6511.2</td>\n",
+       "      <td>6512.6</td>\n",
+       "      <td>348.0</td>\n",
+       "      <td>2025-10-12T15:30:07.014665Z</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2625454</th>\n",
+       "      <td>2025-10-10 20:59:00+00:00</td>\n",
+       "      <td>SPX500_USD</td>\n",
+       "      <td>M1</td>\n",
+       "      <td>6512.4</td>\n",
+       "      <td>6513.8</td>\n",
+       "      <td>6512.2</td>\n",
+       "      <td>6512.6</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>2025-10-12T15:30:07.014670Z</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             time  instrument granularity    open    high  \\\n",
+       "2625450 2025-10-10 20:55:00+00:00  SPX500_USD          M1  6515.0  6517.0   \n",
+       "2625451 2025-10-10 20:56:00+00:00  SPX500_USD          M1  6513.6  6518.6   \n",
+       "2625452 2025-10-10 20:57:00+00:00  SPX500_USD          M1  6516.0  6525.2   \n",
+       "2625453 2025-10-10 20:58:00+00:00  SPX500_USD          M1  6513.8  6515.6   \n",
+       "2625454 2025-10-10 20:59:00+00:00  SPX500_USD          M1  6512.4  6513.8   \n",
+       "\n",
+       "            low   close  volume                 collected_at  \\\n",
+       "2625450  6503.6  6513.6   555.0  2025-10-12T15:30:07.014647Z   \n",
+       "2625451  6512.2  6516.0   416.0  2025-10-12T15:30:07.014653Z   \n",
+       "2625452  6511.6  6514.4   501.0  2025-10-12T15:30:07.014659Z   \n",
+       "2625453  6511.2  6512.6   348.0  2025-10-12T15:30:07.014665Z   \n",
+       "2625454  6512.2  6512.6    36.0  2025-10-12T15:30:07.014670Z   \n",
+       "\n",
+       "         minutes_since_last_data  is_backfilled  \\\n",
+       "2625450                        0              0   \n",
+       "2625451                        0              0   \n",
+       "2625452                        0              0   \n",
+       "2625453                        0              0   \n",
+       "2625454                        0              0   \n",
+       "\n",
+       "         has_original_prev_30_to_60min  has_original_prev_30_to_360min  \n",
+       "2625450                              1                               1  \n",
+       "2625451                              1                               1  \n",
+       "2625452                              1                               1  \n",
+       "2625453                              1                               1  \n",
+       "2625454                              1                               1  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail()"
+   ]
   }
  ],
  "metadata": {
