optuna 2 stage hyperparameter tuning and AR pipeline

--- a/notebooks/N02_kz_ARIMA.ipynb
+++ b/notebooks/N02_kz_ARIMA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "3a37736c",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "b7b031c7",
    "metadata": {},
    "outputs": [],
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": null,
    "id": "81cb4047",
    "metadata": {},
    "outputs": [],
@@ -696,6 +696,7 @@
     "import pandas as pd\n",
     "import statsmodels.api as sm\n",
     "from sklearn.metrics import mean_squared_error\n",
+    "import os, pickle, json\n",
     "\n",
     "\n",
     "# === 1-step recursive forecast (FAST) =======================================\n",
@@ -764,17 +765,8 @@
     "        f\"pred_t+{horizon}\": preds,\n",
     "        f\"true_t+{horizon}\": trues\n",
     "    })\n",
-    "    return mse, df\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 201,
-   "id": "3300277b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os, pickle, json\n",
+    "    return mse, df\n",
+    "\n",
     "def train_val_h_step_OLS(endog_train, endog_val, lags, expt_dir, h=30):\n",
     "    # Train 1-step OLS model\n",
     "    model_1step, _, _ = fit_direct_h_ols(endog_train, lags=lags, h=h)\n",
@@ -811,8 +803,17 @@
     "    metrics_dict[lags] = mse_30\n",
     "\n",
     "    with open(json_path, \"w\") as f:\n",
-    "        json.dump(metrics_dict, f, indent=4)\n"
+    "        json.dump(metrics_dict, f, indent=4)\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3300277b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -821,7 +822,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_val_h_step_OLS(endog, endog_val, 1, './AR_tuning', h=30)"
+    "train_val_h_step_OLS(endog, endog_val, 1, './AR_tuning', h=30)\n",
+    "train_val_h_step_OLS(endog, endog_val, 2, './AR_tuning', h=30)\n",
+    "train_val_h_step_OLS(endog, endog_val, 3, './AR_tuning', h=30)"
    ]
   },
   {
