added OOT2 last 10k rows

--- a/notebooks/N03_hyperparameter_testing.ipynb
+++ b/notebooks/N03_hyperparameter_testing.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5e9097ea",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,52 @@
       "2025-11-02 23:39:48,162 - INFO - Target stats: mean=0.000798, std=0.130454\n",
       "2025-11-02 23:39:48,314 - INFO - News features provided but ignored for autoregressive modelling.\n",
       "2025-11-02 23:39:48,317 - INFO - Training autoregressive OLS model with MLflow tracking...\n",
-      "2025-11-02 23:39:48,406 - INFO - MLflow tracking URI: file:///C:/Users/user/Desktop/kz%20code/fx-ml-pipeline/mlruns | Experiment: sp500_prediction\n"
+      "2025-11-02 23:39:48,406 - INFO - MLflow tracking URI: file:///C:/Users/user/Desktop/kz%20code/fx-ml-pipeline/mlruns | Experiment: sp500_prediction\n",
+      "2025-11-02 23:39:50,126 - INFO - Prepared autoregressive features with 2 lags (2625062 samples, 4 features).\n",
+      "2025-11-02 23:39:50,224 - INFO - \n",
+      "================================================================================\n",
+      "2025-11-02 23:39:50,224 - INFO - TEMPORAL DATA SPLITTING\n",
+      "2025-11-02 23:39:50,224 - INFO - ================================================================================\n",
+      "2025-11-02 23:39:50,375 - INFO - Total samples: 2625062\n",
+      "2025-11-02 23:39:50,375 - INFO - Train: 1575036 samples (60%) | 2020-10-13 21:27:00+00:00 to 2023-10-12 16:02:00+00:00\n",
+      "2025-11-02 23:39:50,375 - INFO - Val:   525013 samples (20%) | 2023-10-12 16:03:00+00:00 to 2024-10-11 06:15:00+00:00\n",
+      "2025-11-02 23:39:50,375 - INFO - Test:  262506 samples (10%) | 2024-10-11 06:16:00+00:00 to 2025-04-11 13:21:00+00:00\n",
+      "2025-11-02 23:39:50,375 - INFO - OOT:   262507 samples (10%) | 2025-04-11 13:22:00+00:00 to 2025-10-10 20:28:00+00:00\n",
+      "2025-11-02 23:39:50,375 - INFO - ================================================================================\n",
+      "\n",
+      "2025-11-02 23:39:50,693 - INFO - Refitting final model on 1575036 train and 525013 validation samples (total=2100049).\n",
+      "2025-11-02 23:39:50,933 - INFO - Final model trained. R-squared: 0.9334 | Adj. R-squared: 0.9334\n",
+      "100%|██████████| 1575036/1575036 [10:21<00:00, 2534.70it/s]\n",
+      "2025-11-02 23:50:12,408 - INFO - Completed train predictions...\n",
+      "100%|██████████| 525013/525013 [03:23<00:00, 2579.26it/s]\n",
+      "2025-11-02 23:53:35,972 - INFO - Completed validation predictions...\n",
+      "100%|██████████| 262506/262506 [01:36<00:00, 2734.22it/s]\n",
+      "2025-11-02 23:55:11,991 - INFO - Completed test predictions...\n",
+      "100%|██████████| 262507/262507 [01:48<00:00, 2417.10it/s]\n",
+      "2025-11-02 23:57:00,605 - INFO - Completed OOT predictions...\n",
+      "2025-11-02 23:57:07,062 - INFO - Compiled 2625062 predictions across all splits\n",
+      "2025-11-02 23:57:17,210 - INFO - Saved predictions to AR_test\\sp500_prediction_20251102_233914\\sp500_prediction\\predictions_vs_actuals.csv\n",
+      "2025-11-02 23:57:42,316 - INFO - Saved predictions plot to AR_test\\sp500_prediction_20251102_233914\\sp500_prediction\\predictions_vs_actuals.png\n",
+      "2025-11-02 23:57:42,540 - INFO - Recursive evaluation (t+30): Train RMSE=0.144767 MAE=0.073932 | Val RMSE=0.095790 MAE=0.049061 | Test RMSE=0.177694 MAE=0.070881 | OOT RMSE=0.111848 MAE=0.055899\n",
+      "2025-11-02 23:57:43,829 - INFO - Saving autoregressive model artifacts locally...\n",
+      "2025-11-02 23:57:45,096 - INFO -   Model saved: AR_test\\sp500_prediction_20251102_233914\\ar_ols_30min_20251102_235743.pkl\n",
+      "2025-11-02 23:57:45,096 - INFO -   Feature metadata saved: AR_test\\sp500_prediction_20251102_233914\\ar_ols_30min_20251102_235743_features.json\n",
+      "2025-11-02 23:57:45,096 - INFO -   Metrics saved: AR_test\\sp500_prediction_20251102_233914\\ar_ols_30min_20251102_235743_metrics.json\n",
+      "2025-11-02 23:57:45,096 - INFO - \n",
+      "================================================================================\n",
+      "2025-11-02 23:57:45,096 - INFO - TRAINING COMPLETE\n",
+      "2025-11-02 23:57:45,096 - INFO - ================================================================================\n",
+      "2025-11-02 23:57:45,103 - INFO - Prediction horizon: 30 minutes\n",
+      "2025-11-02 23:57:45,104 - INFO - Forecast horizon (steps): 30\n",
+      "2025-11-02 23:57:45,104 - INFO - Selected lag order: 2\n",
+      "2025-11-02 23:57:45,104 - INFO - Total samples (post-lagging): 2625062\n",
+      "2025-11-02 23:57:45,104 - INFO - Features: 4\n",
+      "2025-11-02 23:57:45,104 - INFO - Test Set  - RMSE: 0.1777 | MAE: 0.0709\n",
+      "2025-11-02 23:57:45,104 - INFO - OOT Set   - RMSE: 0.1118 | MAE: 0.0559\n",
+      "2025-11-02 23:57:45,104 - INFO - Model saved to: AR_test\\sp500_prediction_20251102_233914\n",
+      "2025-11-02 23:57:45,104 - INFO - MLflow tracking URI: file:///C:/Users/user/Desktop/kz%20code/fx-ml-pipeline/mlruns\n",
+      "2025-11-02 23:57:45,108 - INFO - ================================================================================\n",
+      "\n"
      ]
     }
    ],
