--- a/docker/monitoring/test_app.ipynb
+++ b/docker/monitoring/test_app.ipynb
@@ -2,7 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "423cf49d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.7.15'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import evidently\n",
+    "evidently.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "37798514",
    "metadata": {},
    "outputs": [],
@@ -151,7 +173,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cs611",
+   "display_name": "playground",
    "language": "python",
    "name": "python3"
   },
@@ -165,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
