--- a/docker/monitoring/test_app.ipynb
+++ b/docker/monitoring/test_app.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "423cf49d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'0.7.15'"
+       "'0.7.0'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,18 +27,29 @@
    "execution_count": 3,
    "id": "37798514",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current directory: c:\\Users\\gabjj\\Desktop\\Education\\MITB\\CS611\\project\\fx-ml-pipeline\n",
+      "Changed directory to: c:\\Users\\gabjj\\Desktop\\Education\\MITB\\CS611\\project\\fx-ml-pipeline\n",
+      "Simulated predictions saved.\n"
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
+    "import os, time, json\n",
     "import pandas as pd, numpy as np\n",
+    "from pathlib import Path\n",
     "from fastapi import FastAPI, HTTPException\n",
     "from fastapi.responses import FileResponse, PlainTextResponse\n",
     "from fastapi.staticfiles import StaticFiles\n",
     "\n",
     "from evidently import Report, Regression, Dataset, DataDefinition\n",
-    "from evidently.presets import DataDriftPreset, DataSummaryPreset, RegressionPreset\n",
     "from evidently.tests import lte, gte, lt, gt, is_in, not_in, eq, not_eq\n",
-    "from evidently.metrics import RMSE, ValueDrift, DriftedColumnsCount\n",
+    "from evidently.presets import DataDriftPreset, RegressionPreset\n",
+    "from evidently.metrics import ValueDrift, DriftedColumnsCount\n",
     "\n",
     "# # Get the AIP token from environment\n",
     "# EVIDENTLY_API_TOKEN = os.getenv(\"EVIDENTLY_AI\")\n",
@@ -53,6 +64,7 @@
     "GOLD_NEWS = os.path.join(DATA_DIR, \"gold\", \"news\", \"signals\", \"spx500_trading_signals.parquet\")\n",
     "GOLD_LABELS = os.path.join(DATA_DIR, \"gold\", \"market\", \"labels\", \"spx500_labels_30min.parquet\")   # user_id, target_regression, label\n",
     "PREDS = os.path.join(DATA_DIR, \"predictions\", \"spx500_batch_scores.parquet\")  # user_id, score\n",
+    "MODELS = os.path.join(\"models\", \"production\")\n",
     "REPORT_FEATURES_HTML = os.path.join(REPORTS_DIR, \"features_latest_report.html\")\n",
     "REPORT_DRIFT_HTML = os.path.join(REPORTS_DIR, \"features_drift_report.html\")\n",
     "START_TRAIN = \"2023-10-13\"\n",
@@ -78,13 +90,45 @@
     "    df_example.to_parquet(PREDS.replace(\"/\", \"\\\\\"), index=False)\n",
     "    print(\"Simulated predictions saved.\")\n",
     "\n",
-    "# print(\"Current directory:\", os.getcwd())\n",
-    "# # Change directory to root\n",
-    "# os.chdir(\"c:\\\\Users\\\\gabjj\\\\Desktop\\\\Education\\\\MITB\\\\CS611\\\\project\\\\fx-ml-pipeline\")\n",
-    "# print(\"Changed directory to:\", os.getcwd())\n",
-    "# RUN_SIMULATION = True\n",
-    "# if RUN_SIMULATION:\n",
-    "#     simulate_predictions()"
+    "print(\"Current directory:\", os.getcwd())\n",
+    "# Change directory to root\n",
+    "os.chdir(\"c:\\\\Users\\\\gabjj\\\\Desktop\\\\Education\\\\MITB\\\\CS611\\\\project\\\\fx-ml-pipeline\")\n",
+    "print(\"Changed directory to:\", os.getcwd())\n",
+    "RUN_SIMULATION = True\n",
+    "if RUN_SIMULATION:\n",
+    "    simulate_predictions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b3d9be1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_gold_mkt = pd.read_parquet(GOLD_MKT)\n",
+    "df_gold_labels = pd.read_parquet(GOLD_LABELS)\n",
+    "df_pred = pd.read_parquet(PREDS)\n",
+    "df_gold = df_gold_mkt.merge(df_gold_labels[['time', 'target_regression']], on=[\"time\"], how=\"inner\", suffixes=(\"_mkt\", \"_labels\"))\n",
+    "df_gold = df_gold.merge(df_pred[['time', 'predicted_regression']], on=[\"time\"], how=\"inner\", suffixes=(\"\", \"_pred\"))\n",
+    "\n",
+    "with open(os.path.join(MODELS, \"current_features.json\"), \"r\") as f:\n",
+    "    current_features = json.load(f)\n",
+    "\n",
+    "numerical_features = [d for d in df_gold.columns if df_gold[d].dtype in [np.float64, np.int64] and d not in [\"time\", \"predicted_regression\", \"target_regression\"]]\n",
+    "categorical_features = [d for d in df_gold.columns if df_gold[d].dtype == object and d not in [\"time\", \"predicted_regression\", \"target_regression\"]]\n",
+    "numerical_features = [f for f in numerical_features if f in current_features['features']]\n",
+    "categorical_features = [f for f in categorical_features if f in current_features['features']]\n",
+    "\n",
+    "# Create dataset\n",
+    "data_definition = DataDefinition(\n",
+    "    regression=[Regression(target=\"target_regression\", prediction=\"predicted_regression\")],\n",
+    "    numerical_columns=numerical_features,\n",
+    "    categorical_columns=categorical_features\n",
+    ")\n",
+    "\n",
+    "features_train_df = df_gold[(df_gold['time'] >= START_TRAIN) & (df_gold['time'] <= END_TRAIN)][numerical_features + categorical_features + ['time', 'target_regression', 'predicted_regression']]\n",
+    "features_oot_df = df_gold[df_gold['time'] > END_TRAIN][numerical_features + categorical_features + ['time', 'target_regression', 'predicted_regression']]"
    ]
   },
   {
@@ -100,13 +144,17 @@
     "\n",
     "    df_gold_mkt = pd.read_parquet(GOLD_MKT)\n",
     "    df_gold_labels = pd.read_parquet(GOLD_LABELS)\n",
-    "    # df_gold_news = pd.read_parquet(GOLD_NEWS)\n",
     "    df_pred = pd.read_parquet(PREDS)\n",
     "    df_gold = df_gold_mkt.merge(df_gold_labels[['time', 'target_regression']], on=[\"time\"], how=\"inner\", suffixes=(\"_mkt\", \"_labels\"))\n",
     "    df_gold = df_gold.merge(df_pred[['time', 'predicted_regression']], on=[\"time\"], how=\"inner\", suffixes=(\"\", \"_pred\"))\n",
     "\n",
+    "    with open(os.path.join(MODELS, \"current_features.json\"), \"r\") as f:\n",
+    "        current_features = json.load(f)['features']\n",
+    "\n",
     "    numerical_features = [d for d in df_gold.columns if df_gold[d].dtype in [np.float64, np.int64] and d not in [\"time\", \"predicted_regression\", \"target_regression\"]]\n",
     "    categorical_features = [d for d in df_gold.columns if df_gold[d].dtype == object and d not in [\"time\", \"predicted_regression\", \"target_regression\"]]\n",
+    "    numerical_features = [f for f in numerical_features if f in current_features]\n",
+    "    categorical_features = [f for f in categorical_features if f in current_features]\n",
     "\n",
     "    # Create dataset\n",
     "    data_definition = DataDefinition(\n",
@@ -115,28 +163,28 @@
     "        categorical_columns=categorical_features\n",
     "    )\n",
     "\n",
-    "    features_train_df = df_gold[(df_gold['time'] >= START_TRAIN) & (df_gold['time'] <= END_TRAIN)]\n",
-    "    features_oot_df = df_gold[df_gold['time'] > END_TRAIN]\n",
+    "    features_train_df = df_gold[(df_gold['time'] >= START_TRAIN) & (df_gold['time'] <= END_TRAIN)][numerical_features + categorical_features + ['time', 'target_regression', 'predicted_regression']]\n",
+    "    features_oot_df = df_gold[df_gold['time'] > END_TRAIN][numerical_features + categorical_features + ['time', 'target_regression', 'predicted_regression']]\n",
     "    reference_dataset = Dataset.from_pandas(features_train_df, data_definition=data_definition)\n",
     "    current_dataset = Dataset.from_pandas(features_oot_df, data_definition=data_definition)\n",
     "\n",
     "    regression_preset = Report(metrics=[\n",
     "        RegressionPreset(\n",
-    "            mae_tests=[lt(0.3)],\n",
-    "            mean_error_tests=[gt(-0.2), lt(0.2)],\n",
-    "            rmse_tests=[lt(0.3)],\n",
-    "            r2score_tests=[gt(0.5)],\n",
+    "            # mae_tests=[lt(0.3)],\n",
+    "            # mean_error_tests=[gt(-0.2), lt(0.2)],\n",
+    "            # rmse_tests=[lt(0.3)],\n",
+    "            # r2score_tests=[gt(0.5)],\n",
     "        )\n",
     "    ])\n",
     "\n",
-    "    regression_snapshot_with_reference = regression_preset.run(current_data=current_dataset, reference_data=reference_dataset)\n",
+    "    regression_snapshot_with_reference = regression_preset.run(current_data=current_dataset, reference_data=current_dataset)\n",
     "\n",
     "    # Drift report\n",
     "    value_drift_columns = [ValueDrift(column=col, method=\"psi\", threshold=0.05) for col in numerical_features]\n",
     "    drift_report = Report([\n",
     "        DriftedColumnsCount(\n",
-    "            cat_stattest=\"psi\", num_stattest=\"wasserstein\", \n",
-    "            per_column_method={\"target_regression\":\"psi\", \"predicted_regression\":\"psi\"}, drift_share=0.8\n",
+    "            cat_stattest=\"psi\", num_stattest=\"wasserstein\",\n",
+    "            per_column_method={\"target_regression\": \"psi\", \"predicted_regression\": \"psi\"}, drift_share=0.8\n",
     "        )\n",
     "    ] + value_drift_columns, include_tests=False)\n",
     "\n",
@@ -169,6 +217,14 @@
     "            raise HTTPException(status_code=400, detail=f\"Generate failed: {e}\")\n",
     "    return FileResponse(REPORT_FEATURES_HTML, media_type=\"text/html\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1086aeb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
